--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+    <div id="header-container">
+        <div> View High Scores</div>
+        <div id="countdown">Time Left: 60 seconds</div>
+    </div>
+    <main> 
     <div id="container">
         <div id = "question-container" class = "hide">
             <div id="question">Question</div>
@@ -30,7 +35,8 @@
             <div id="final-score"> </div>
         </div>
     </div>
-   
-    <script src="./script.js"></script>
+   </main>
+
+   <script src="./script.js"></script>
 </body>
 </html>
